fix(icon-button): isolate the button to prevent z-index issues
The main reason for this is that MDC 14 has added the following
to `.mdc-icon-button`:
`z-index: 0; // Added to render above the container in IE11 tests.`
www.shorturl.at/EJKZ0 (shortened link due to Commitlint checks)
We don't want to risk our consumers getting
sudden UI problems, due to this change; in case they have specified
z-indexes. To prevent that, we isolate the component's stacking context,
which is generally a good thing.

--- a/src/components/icon-button/icon-button.scss
+++ b/src/components/icon-button/icon-button.scss
@@ -8,6 +8,10 @@
 
 $height-of-limel-button: functions.pxToRem(36);
 
+:host(limel-icon-button) {
+    isolation: isolate;
+}
+
 :host([hidden]) {
     display: none;
 }
